# xr-lang

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_STATUS.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PLATFORM_BUILDS.md  README.md  TESTING.md  TEST_FRAMEWORK.md  TEST_RESULTS.md  TEST_SUMMARY.md  _config.yml  benchmark_results.csv  benchmark_runner.sh  build.sh  implementation-status.md  list-scenes.sh  project-vision.md  run-scene.sh  run_tests  run_tests.rs  test_3d.sh  test_all_examples.sh  test_begin.xrdsl  test_camera  test_camera.rs  test_code_sync.rs  test_hotswap_fix.xrdsl  test_results.json  test_runner.sh  test_simple.rs  test_spin_hotswap.xrdsl  testing-framework-design.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-blog.yml
ai/: Cargo.toml
ai/src/: claude.rs  lib.rs  ollama.rs  stt.rs  tools.rs
app-hosts/desktop/: Cargo.toml
app-hosts/desktop/src/: hotreload.rs  live_xrl_runner.rs  main.rs  xrl_runner.rs
app-hosts/quest/: Cargo.toml
app-hosts/quest/src/: lib.rs
app-hosts/validate-dsl/: Cargo.toml
app-hosts/validate-dsl/src/: main.rs
app-hosts/web/: Cargo.toml  build.sh  index.html
app-hosts/web/src/: lib.rs
assets/models/: teapot.glb
blog/: index.html
blog/css/: style.css
blog/posts/: homoiconicity-meets-xr.html  the-meta-medium.html  why-3d-changes-everything.html
cv/: Cargo.toml
cv/src/: hands.rs  lib.rs  overlay.rs  sam.rs
docs/: META_ARCHITECTURE.md  STAGE_A_IMPLEMENTATION.md  TRUE_LIVENESS.md
docs/lang/: lang-design-review.md  lang-implementation-research.md
docs/testing/: TESTING_3D.md
dsl/: Cargo.toml
dsl/src/: ast.rs  color.rs  error.rs  lib.rs  logger.rs  lower.rs  macros.rs  parser.rs  parser_helpers.rs  position_tracker.rs  repl_formatter.rs  scene_macros.rs
dsl/tests/: simple_tests.rs
examples/: 3d_animated_scene.xrl  3d_scene_basic.xrl  README.md  advanced_cameras.xrl  all_primitives.xrl  all_primitives_test.xrl  basic_3d.wgsl  camera_demo.xrl  camera_test.xrl  complex_behaviors.xrdsl  debug_spin.xrdsl  extreme_stress_test.xrdsl  flat_quad.wgsl  hello_xr.xrdsl  hot_reload_demo.xrl  hot_reload_test.xrl  interactive_test.xrdsl  kitchen_sink.xrdsl  kitchen_sink.xrl  let_cond_test.xrdsl  live_demo.xrl  loop_animation.xrdsl  loop_grid.xrdsl  loop_grid_simple.xrdsl  massive_grid_test.xrdsl  math_functions_showcase.xrdsl  math_showcase_simple.xrdsl  million_objects_test.xrdsl  preserve_test.xrdsl  primitives_showcase.xrdsl  pulse_panel.xrdsl  reconciliation_test.xrdsl  rotation_test.xrdsl  simple_3d.xrdsl  simple_demo.xrl  simple_entities.xrdsl  sine_wave_animated.xrdsl  sine_wave_demo.xrdsl  sine_wave_full.xrdsl  sine_wave_simple.xrdsl  (+31 more)
gpu/: Cargo.toml
gpu/src/: behavior_system.rs  benchmark.rs  cache.rs  code_sync.rs  compute.rs  debug_config.rs  device.rs  entity.rs  frustum.rs  gizmo.rs  gpu_driven_renderer.rs  gpu_memory_pool.rs  instanced_renderer.rs  lib.rs  mesh_gen.rs  model_loader.rs  perf_monitor.rs  perf_monitor_simple.rs  perf_overlay.rs  perf_overlay_live.rs  perf_text.rs  reconciliation.rs  render.rs  render3d.rs  runtime_state.rs  scene.rs  shader.rs
gpu/src/materials/: mesh_basic_material.rs  mod.rs
gpu/src/math/: mat4.rs  mod.rs  quat.rs  transform.rs  vec3.rs
gpu/src/shaders/: gizmo.wgsl  gpu_animation.wgsl  gpu_culling.wgsl  mesh_basic_instanced.wgsl  mesh_basic_material.wgsl  perf_monitor.wgsl  perf_overlay.wgsl  perf_overlay_live.wgsl  text_3d.wgsl  ui_panel.wgsl
gpu/src/ui3d/: component.rs  debug_atlas.rs  default_font.rs  ecs.rs  editor.rs  input.rs  mod.rs  sdf_generator.rs  simple.rs  systems.rs  text_renderer.rs  text_renderer_backup.rs
gpu/tests/: code_sync_test.rs  hot_swap_integration_tests.rs  integration_tests.rs  reconciliation_tests.rs  shader_hot_swap_tests.rs  shader_tests.rs
ir/: Cargo.toml
ir/src/: lib.rs  ssa.rs  ty.rs
jit/: Cargo.toml
jit/src/: cranelift_backend.rs  lib.rs  loader.rs  symbols.rs  vtable.rs
testing/: Cargo.toml
testing/src/: ast.rs  cli.rs  lib.rs  parser.rs  runner.rs  visualization.rs
tests/: camera_tests.rs  hot_reload_tests.rs  introspection_tests.rs  test_runner.rs
vm/: Cargo.toml
vm/src/: bytecode.rs  capability.rs  compiler.rs  evaluator.rs  ffi.rs  hotreload.rs  hotswap.rs  hotswap_coordinator.rs  image.rs  interpreter.rs  intrinsics.rs  intrinsics_camera.rs  lib.rs  live_image.rs  macro_system.rs  meta.rs  parser.rs  persistence.rs  preservation_manager.rs  scene_differ.rs  selective_persistence.rs  test_framework.rs  value.rs
vm/tests/: cross_platform_integration.rs  hotreload_integration.rs  primitives_test.rs  stage_a_integration.rs  test_3d_examples.rs
xr/: Cargo.toml
xr/src/: anchors.rs  input.rs  lib.rs  passthrough.rs  scene.rs  session.rs
