[workspace]
members = [
    "dsl",
    "ir", 
    "jit",
    "vm",
    "gpu",
    "xr",
    "ai",
    "cv",
    "testing",
    "app-hosts/desktop",
    "app-hosts/quest",
    "app-hosts/web"
]
resolver = "2"

# Use default-members to exclude quest from default builds
default-members = [
    "dsl",
    "ir",
    "jit", 
    "vm",
    "gpu",
    "xr",
    "ai",
    "cv",
    "testing",
    "app-hosts/desktop",
    "app-hosts/web"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["XR-DSL Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
bytemuck = { version = "1.14", features = ["derive"] }

# GPU & Graphics
wgpu = "0.20"
winit = { version = "0.30", features = ["rwh_05"] }

# JIT compilation
cranelift-codegen = "0.108"
cranelift-frontend = "0.108"
cranelift-module = "0.108"
cranelift-jit = "0.108"
cranelift-object = "0.108"
object = "0.36"
region = "3.0"

# XR
openxr = "0.18"

# Android (only used when building for Android)
# These are workspace-level dependencies but only actually used by the quest app
ndk = "0.8"

# Hash for caching
twox-hash = "1.6"

# ECS
hecs = "0.10.5"

# Text rendering
rusttype = "0.9"

# File watching
notify = "6.1"

# WebAssembly dependencies
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[workspace.metadata.android]
build_targets = ["aarch64-linux-android"]