[package]
name = "gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
twox-hash.workspace = true
hecs.workspace = true
log.workspace = true
rusttype.workspace = true
vm = { path = "../vm" }
dsl = { path = "../dsl" }

# Model loading dependencies
tobj = "4.0"  # For OBJ loading
stl_io = "0.8"  # For STL loading