[package]
name = "vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true
bincode = "1.3"
sha2 = "0.10"
rand = "0.8"

# Internal dependencies
dsl = { path = "../dsl" }