[package]
name = "quest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
ndk.workspace = true
openxr.workspace = true
wgpu = { workspace = true }
winit = { workspace = true, features = ["android-native-activity"] }
bytemuck.workspace = true
log.workspace = true
android_logger = "0.13"
dsl = { path = "../../dsl" }
ir = { path = "../../ir" }
jit = { path = "../../jit" }
vm = { path = "../../vm" }
gpu = { path = "../../gpu" }
xr = { path = "../../xr" }
ai = { path = "../../ai" }
cv = { path = "../../cv" }

[package.metadata.android]
package = "com.example.xrdsl"
apk_name = "xrdsl"
assets = ["../../examples"]
target_sdk_version = 33
min_sdk_version = 26

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.CAMERA"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"